--- a/setup/openvpn.conf
+++ b/setup/openvpn.conf
@@ -22,5 +22,5 @@ status /tmp/openvpn-status.log
 user nobody
 group nogroup
 push "topology subnet"
-push "route-metric 9999"
-push "dhcp-option DNS 1.1.1.1"
+#push "route-metric 9999"
+#push "dhcp-option DNS 1.1.1.1"
