fix back and front

--- a/setup/openvpn.conf
+++ b/setup/openvpn.conf
@@ -1,5 +1,5 @@
 # server 172.16.100.0 255.255.255.0
-verb 3
+verb 4
 tls-server
 ca /etc/openvpn/easyrsa/pki/ca.crt
 key /etc/openvpn/easyrsa/pki/private/server.key
@@ -10,14 +10,14 @@ tls-auth /etc/openvpn/easyrsa/pki/ta.key
 key-direction 0
 cipher AES-128-CBC
 #management 127.0.0.1 8989
-keepalive 10 60
+keepalive 10 120
 persist-key
 persist-tun
 topology subnet
 #duplicate-cn
-#proto tcp
-#port 1194
-#dev tun0
+proto tcp
+port 1194
+dev tun
 status /tmp/openvpn-status.log
 user nobody
 group nogroup
